# Pump.fun-Smart-Contract

./: Anchor.toml  README.md  package.json  tsconfig.json
cli/: programId.ts
cli/accounts/: CurveConfiguration.ts  LiquidityPool.ts  LiquidityProvider.ts  index.ts
cli/errors/: custom.ts
cli/instructions/: addLiquidity.ts  index.ts  initialize.ts  swap.ts
programs/pump/: Cargo.toml
programs/pump/src/: consts.rs  errors.rs  lib.rs  state.rs
programs/pump/src/instructions/: add_liquidity.rs  initialize.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/pump/src/utils/: calc.rs  mod.rs
tests/: pump.ts
